Started tracking interval between CVS data

--- a/analysis/cvs_detector.ipynb
+++ b/analysis/cvs_detector.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -49,10 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_outcome_values(pts):\n",
@@ -66,6 +62,19 @@
     "            print \"OUTCOME MISSING\"\n",
     "    return outcomes\n",
     "\n",
+    "def find_intervals(values):\n",
+    "    #take lngest set of values, convert to set, then list, then sort it.\n",
+    "    cvs_values = {k:sorted(list(set(max(v,key=len)))) for k,v in values.iteritems()}\n",
+    "    #find distance between all points\n",
+    "    distances = {k:[v2 - v1 for v1,v2 in zip(vs, vs[1:])] for k,vs in cvs_values.iteritems()}\n",
+    "#     print values, cvs_values, distances\n",
+    "    #check if distances are all the same or not\n",
+    "    intervals = {k:True if len(set(ds))==1 else False for k,ds in distances.iteritems()}\n",
+    "#     print intervals\n",
+    "    return intervals\n",
+    "    \n",
+    "    \n",
+    "\n",
     "def detect_cvs_quant_in_table(table):\n",
     "    cvs_variable = {\"Battery voltage\":0,\n",
     "                        \"Area\":0,\n",
@@ -73,7 +82,12 @@
     "                        \"Width\":0,\n",
     "                        \"Wavelength\":0,\n",
     "                        \"Concentration\":0}\n",
-    "\n",
+    "    cvs_values = {\"Battery voltage\":[[]],\n",
+    "                        \"Area\":[[]],\n",
+    "                        \"Separation\":[[]],\n",
+    "                        \"Width\":[[]],\n",
+    "                        \"Wavelength\":[[]],\n",
+    "                        \"Concentration\":[[]]}\n",
     "    variable_changed = None\n",
     "    new_var_changed = None\n",
     "    number_of_changes = 1\n",
@@ -85,6 +99,7 @@
     "        curr_point = table[datapoint]\n",
     "        if prev_point:\n",
     "            values_of_2_points = get_values_per_variable([prev_point,curr_point])\n",
+    "#             print values_of_2_points['Width']\n",
     "            confounded = pts_are_confounded(values_of_2_points)\n",
     "            outcomes = get_outcome_values([prev_point,curr_point])\n",
     "            outcome1,outcome2 = outcomes[0],outcomes[1]\n",
@@ -102,16 +117,21 @@
     "                if variable_changed == None or new_var_changed == variable_changed:\n",
     "                    number_of_changes += 1\n",
     "                else:\n",
+    "                    for k in cvs_values.keys():\n",
+    "                        if cvs_values[k][-1]!=[]: cvs_values[k].append([])\n",
     "                    number_of_changes = 2\n",
     "                variable_changed = new_var_changed\n",
     "                if variable_changed in cvs_variable.keys(): #ignore cvs on detector, lightbulba nd connection\n",
     "                    cvs_variable[variable_changed] = max(number_of_changes,cvs_variable[variable_changed])\n",
+    "                    cvs_values[variable_changed][-1].extend(values_of_2_points[variable_changed])\n",
+    "#                     print cvs_values\n",
     "            else:\n",
     "                number_of_changes = 1\n",
     "                variable_changed = None\n",
     "        prev_point = curr_point.copy()\n",
-    "    return cvs_variable\n",
-    "            \n",
+    "    \n",
+    "    cvs_intervals = find_intervals(cvs_values)\n",
+    "    return cvs_variable, cvs_intervals\n",
     "            \n",
     "            \n",
     "def get_cvs_per_variable_in_table(df):\n",
@@ -131,6 +151,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "beers_in_2_on = '''{\n",
+    "    \"1\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 1.3, \"trialNumber\": 1, \"Absorbance\": 0.04, \"Wavelength\": 582, \"Concentration\": 200.0, \"Laser toggle\": 1},     \n",
+    "    \"2\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 1.3, \"trialNumber\": 2, \"Absorbance\": 0.02, \"Wavelength\": 582, \"Concentration\": 100.0, \"Laser toggle\": 1},\n",
+    "    \"3\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 1, \"trialNumber\": 3, \"Absorbance\": 0.04, \"Wavelength\": 582, \"Concentration\": 100.0, \"Laser toggle\": 1},\n",
+    "    \"4\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 2, \"trialNumber\": 4, \"Absorbance\": 0.02, \"Wavelength\": 582, \"Concentration\": 100.0, \"Laser toggle\": 1},\n",
+    "    \"5\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 3, \"trialNumber\": 5, \"Absorbance\": 0.02, \"Wavelength\": 582, \"Concentration\": 100.0, \"Laser toggle\": 1},\n",
+    "    \"6\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 3, \"trialNumber\": 6, \"Absorbance\": 0.02, \"Wavelength\": 582, \"Concentration\": 300.0, \"Laser toggle\": 1}}'''\n",
+    "_, intervals = detect_cvs_quant_in_table(read_table(beers_in_2_on))\n",
+    "print intervals =={'Battery voltage': False, 'Area': False, 'Width': False, 'Separation': False, 'Wavelength': False, 'Concentration': True}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,11 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "convert_axis = {\"Absorbance\":\"absorbance\",\"Concentration\":\"concentration\",\"Width\":\"cuvetteWidth\",\"Wavelength\":\"trialNumber\",\"Battery voltage\":\"trialNumber\",\"Area\":\"area\",\"Separation\":\"separation\",\"Charge\":\"charge\"}\n",
     "def detect_cvs_quant_in_graph(table,x_axis,y_axis):\n",
@@ -162,7 +215,7 @@
     "    #check that outcome variable as one of the axes\n",
     "    \n",
     "    if x_axis not in [\"charge\",\"absorbance\"] and y_axis not in [\"charge\",\"absorbance\"]:\n",
-    "        return cvs_variable\n",
+    "        return cvs_variable,{}\n",
     "    \n",
     "    values = get_values_per_variable(points)\n",
     "    confounded = pts_are_confounded(values)\n",
@@ -173,8 +226,8 @@
     "                #check that variable being varied is in one of the axes\n",
     "                if convert_axis[v] in [x_axis,y_axis]:\n",
     "                    cvs_variable[v] = len(vals)\n",
-    "                    return cvs_variable\n",
-    "    return cvs_variable\n",
+    "                    return cvs_variable,{}\n",
+    "    return cvs_variable,{}\n",
     "    \n",
     "            \n",
     "            \n",
@@ -206,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -235,17 +288,17 @@
     "    \"1\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 1.3, \"trialNumber\": 1, \"Absorbance\": 0.04, \"Wavelength\": 582, \"Concentration\": 200.0, \"Laser toggle\": 1},     \n",
     "    \"2\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 2.0, \"trialNumber\": 2, \"Absorbance\": 0.02, \"Wavelength\": 582, \"Concentration\": 200.0, \"Laser toggle\": 1}}'''\n",
     "beers_out_1_on = {'Battery voltage': 0, 'Area': 0, 'Width': 2, 'Separation': 0, 'Wavelength': 0, 'Concentration': 0}\n",
-    "print \"table\",beers_out_1_on == detect_cvs_quant_in_table(read_table(beers_in_1_on))\n",
-    "print \"graph\",beers_out_1_on == detect_cvs_quant_in_graph(read_table(beers_in_1_on),\"absorbance\",\"cuvetteWidth\")\n",
+    "print \"table\",beers_out_1_on == detect_cvs_quant_in_table(read_table(beers_in_1_on))[0]\n",
+    "print \"graph\",beers_out_1_on == detect_cvs_quant_in_graph(read_table(beers_in_1_on),\"absorbance\",\"cuvetteWidth\")[0]\n",
     "beers_out_1_on = {'Battery voltage': 0, 'Area': 0, 'Width': 0, 'Separation': 0, 'Wavelength': 0, 'Concentration': 0}\n",
-    "print \"graph\",beers_out_1_on == detect_cvs_quant_in_graph(read_table(beers_in_1_on),\"concentration\",\"absorbance\")\n",
+    "print \"graph\",beers_out_1_on == detect_cvs_quant_in_graph(read_table(beers_in_1_on),\"concentration\",\"absorbance\")[0]\n",
     "\n",
     "beers_in_1_off = '''{\n",
     "    \"1\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 1.3, \"trialNumber\": 1, \"Absorbance\": \"nan\", \"Wavelength\": 582, \"Concentration\": 200.0, \"Laser toggle\": 0},     \n",
     "    \"2\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 1.3, \"trialNumber\": 2, \"Absorbance\": \"nan\", \"Wavelength\": 582, \"Concentration\": 100.0, \"Laser toggle\": 0}}'''\n",
     "beers_out_1_off = {'Battery voltage': 0, 'Area': 0, 'Width': 0, 'Separation': 0, 'Wavelength': 0, 'Concentration': 0}\n",
-    "print \"table\",beers_out_1_off == detect_cvs_quant_in_table(read_table(beers_in_1_off))\n",
-    "print \"graph\",beers_out_1_off == detect_cvs_quant_in_graph(read_table(beers_in_1_off),\"concentration\",\"cuvetteWidth\")\n",
+    "print \"table\",beers_out_1_off == detect_cvs_quant_in_table(read_table(beers_in_1_off))[0]\n",
+    "print \"graph\",beers_out_1_off == detect_cvs_quant_in_graph(read_table(beers_in_1_off),\"concentration\",\"cuvetteWidth\")[0]\n",
     "\n",
     "beers_in_2_on = '''{\n",
     "    \"1\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 1.3, \"trialNumber\": 1, \"Absorbance\": 0.04, \"Wavelength\": 582, \"Concentration\": 200.0, \"Laser toggle\": 1},     \n",
@@ -254,32 +307,32 @@
     "    \"4\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 2, \"trialNumber\": 4, \"Absorbance\": 0.02, \"Wavelength\": 582, \"Concentration\": 200.0, \"Laser toggle\": 1}}'''\n",
     "beers_out_2_on_table = {'Battery voltage': 0, 'Area': 0, 'Width': 2, 'Separation': 0, 'Wavelength': 0, 'Concentration': 2}\n",
     "beers_out_2_on_graph = {'Battery voltage': 0, 'Area': 0, 'Width': 0, 'Separation': 0, 'Wavelength': 0, 'Concentration': 0}\n",
-    "print \"table\",beers_out_2_on_table == detect_cvs_quant_in_table(read_table(beers_in_2_on))\n",
-    "print \"graph\",beers_out_2_on_graph == detect_cvs_quant_in_graph(read_table(beers_in_2_on),\"concentration\",\"cuvetteWidth\")\n",
+    "print \"table\",beers_out_2_on_table == detect_cvs_quant_in_table(read_table(beers_in_2_on))[0]\n",
+    "print \"graph\",beers_out_2_on_graph == detect_cvs_quant_in_graph(read_table(beers_in_2_on),\"concentration\",\"cuvetteWidth\")[0]\n",
     "\n",
     "beers_in_1_on_off = '''{\n",
     "    \"1\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 1.3, \"trialNumber\": 1, \"Absorbance\": 0.04, \"Wavelength\": 582, \"Concentration\": 200.0, \"Laser toggle\": 0},     \n",
     "    \"2\": {\"Ruler location\": {\"y\": 3.62, \"x\": 3.28}, \"Detector location\": {\"y\": 2.0, \"x\": 6.67}, \"visible\": true, \"Width\": 1.3, \"trialNumber\": 2, \"Absorbance\": 0.02, \"Wavelength\": 582, \"Concentration\": 100.0, \"Laser toggle\": 1}}'''\n",
     "beers_out_1_on_off = {'Battery voltage': 0, 'Area': 0, 'Width': 0, 'Separation': 0, 'Wavelength': 0, 'Concentration': 0}\n",
-    "print \"table\",beers_out_1_on_off == detect_cvs_quant_in_table(read_table(beers_in_1_on_off))\n",
-    "print \"graph\",beers_out_1_on_off == detect_cvs_quant_in_graph(read_table(beers_in_1_on_off),\"concentration\",\"cuvetteWidth\")\n",
+    "print \"table\",beers_out_1_on_off == detect_cvs_quant_in_table(read_table(beers_in_1_on_off))[0]\n",
+    "print \"graph\",beers_out_1_on_off == detect_cvs_quant_in_graph(read_table(beers_in_1_on_off),\"concentration\",\"cuvetteWidth\")[0]\n",
     "\n",
     "caps_in_1_battery = '''{\n",
     "    \"1\": {\"Battery voltage\": -1.5, \"Area\": 100.0, \"Connection\": \"BATTERY_CONNECTED\", \"Capacitor voltage\": -1.5, \"visible\": true, \"Charge\": -0.13, \"trialNumber\": 1, \"Separation\": 10.0}, \n",
     "    \"2\": {\"Battery voltage\": 0.3923, \"Area\": 100.0, \"Connection\": \"BATTERY_CONNECTED\", \"Capacitor voltage\": 0.3923, \"visible\": true, \"Charge\": 0.03, \"trialNumber\": 2, \"Separation\": 10.0}}'''\n",
     "caps_out_1_battery = {'Battery voltage': 2, 'Area': 0, 'Width': 0, 'Separation': 0, 'Wavelength': 0, 'Concentration': 0}\n",
-    "print \"table\",caps_out_1_battery == detect_cvs_quant_in_table(read_table(caps_in_1_battery))\n",
-    "print \"graph\",caps_out_1_battery == detect_cvs_quant_in_graph(read_table(caps_in_1_battery),\"trialNumber\",\"charge\")\n",
+    "print \"table\",caps_out_1_battery == detect_cvs_quant_in_table(read_table(caps_in_1_battery))[0]\n",
+    "print \"graph\",caps_out_1_battery == detect_cvs_quant_in_graph(read_table(caps_in_1_battery),\"trialNumber\",\"charge\")[0]\n",
     "caps_out_1_battery = {'Battery voltage': 0, 'Area': 0, 'Width': 0, 'Separation': 0, 'Wavelength': 0, 'Concentration': 0}\n",
-    "print \"graph\",caps_out_1_battery == detect_cvs_quant_in_graph(read_table(caps_in_1_battery),\"trialNumber\",\"area\")\n",
+    "print \"graph\",caps_out_1_battery == detect_cvs_quant_in_graph(read_table(caps_in_1_battery),\"trialNumber\",\"area\")[0]\n",
     "\n",
     "\n",
     "caps_in_1_lightbulb = '''{\n",
     "    \"1\": {\"Battery voltage\": -1.5, \"Area\": 100.0, \"Connection\": \"LIGHT_BULB_CONNECTED\", \"Capacitor voltage\": -1.5, \"visible\": true, \"Charge\": -0.13, \"trialNumber\": 1, \"Separation\": 10.0}, \n",
     "    \"2\": {\"Battery voltage\": 0.3923, \"Area\": 100.0, \"Connection\": \"LIGHT_BULB_CONNECTED\", \"Capacitor voltage\": 0.3923, \"visible\": true, \"Charge\": 0.03, \"trialNumber\": 2, \"Separation\": 10.0}}'''\n",
     "caps_out_1_lightbulb = {'Battery voltage': 0, 'Area': 0, 'Width': 0, 'Separation': 0, 'Wavelength': 0, 'Concentration': 0}\n",
-    "print \"table\",caps_out_1_lightbulb == detect_cvs_quant_in_table(read_table(caps_in_1_lightbulb))\n",
-    "print \"graph\",caps_out_1_lightbulb == detect_cvs_quant_in_graph(read_table(caps_in_1_lightbulb),\"trialNumber\",\"charge\")"
+    "print \"table\",caps_out_1_lightbulb == detect_cvs_quant_in_table(read_table(caps_in_1_lightbulb))[0]\n",
+    "print \"graph\",caps_out_1_lightbulb == detect_cvs_quant_in_graph(read_table(caps_in_1_lightbulb),\"trialNumber\",\"charge\")[0]"
    ]
   },
   {
@@ -410,6 +463,16 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.13"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
