Computed usage of table and graph

--- a/analysis/cvs_detector.ipynb
+++ b/analysis/cvs_detector.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -25,6 +27,40 @@
     "matplotlib.style.use('ggplot')\n",
     "matplotlib.rcParams['figure.figsize'] = 25, 15\n",
     "from matplotlib.backends.backend_pdf import PdfPages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build super basic detectors\n",
+    "We want to know who uses tables and graphs. period."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_use_table(df):\n",
+    "    tables = set(df['Table'])\n",
+    "    for i,t in enumerate(tables):\n",
+    "        table = read_table(t)\n",
+    "        if len(table)>0:\n",
+    "            return 1\n",
+    "    return 0\n",
+    "\n",
+    "def get_use_graph(df):\n",
+    "    tables = set(df['Table'])\n",
+    "    for i,t in enumerate(tables):\n",
+    "        table = read_table(t)\n",
+    "        points = get_pts(table,in_graph=True) #grab all points\n",
+    "        if len(points)>0:\n",
+    "            return 1\n",
+    "    return 0"
    ]
   },
   {
@@ -47,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -174,9 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "collapsed": false
    },
    "outputs": [
     {
@@ -214,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "convert_axis = {\"Absorbance\":\"absorbance\",\"Concentration\":\"concentration\",\"Width\":\"cuvetteWidth\",\"Wavelength\":\"trialNumber\",\"Battery voltage\":\"trialNumber\",\"Area\":\"area\",\"Separation\":\"separation\",\"Charge\":\"charge\"}\n",
@@ -274,7 +313,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -361,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -373,9 +414,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## basic detectors first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>use_table</th>\n",
+       "      <th>use_graph</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>studentid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17729162</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           use_table  use_graph\n",
+       "studentid                      \n",
+       "17729162           0          0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids = get_students_to_analyze_log()\n",
+    "use_wrapper_df = pd.DataFrame(index =ids, columns = ['use_table', 'use_graph'])\n",
+    "use_wrapper_df = use_wrapper_df.fillna(0)\n",
+    "use_wrapper_df.index.name = 'studentid'\n",
+    "for c in use_wrapper_df.columns:\n",
+    "    use_wrapper_df[[c]] = use_wrapper_df[[c]].astype(int)\n",
+    "use_wrapper_df[use_wrapper_df.index==17729162]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    " wrapper_all_logs = {'use_table':0,'use_graph':0}\n",
+    "    \n",
+    "%aimport utils_read_parsing\n",
+    "for sim in ['beers','capacitor']:\n",
+    "    log_files = log_files_per_sim[sim]\n",
+    "    for sid,logs in log_files.iteritems():\n",
+    "#         if sid != 17729162:\n",
+    "#             continue\n",
+    "        wrapper_all_logs = {'use_table':0,'use_graph':0}\n",
+    "        for log in logs:\n",
+    "            df = prep_parsing_data(log)\n",
+    "            if not df.empty:\n",
+    "                #we find the instances of CVS in this log file\n",
+    "                use_table = get_use_table(df)\n",
+    "                use_graph = get_use_graph(df)\n",
+    "#                 print sim, use_table, use_graph\n",
+    "                #we append them to a summary cvs\n",
+    "                wrapper_all_logs['use_table'] = max(wrapper_all_logs['use_table'],use_table)\n",
+    "                wrapper_all_logs['use_graph'] = max(wrapper_all_logs['use_graph'],use_graph)\n",
+    "#                 print wrapper_all_logs\n",
+    "\n",
+    "            else:\n",
+    "                print sid, log\n",
+    "\n",
+    "        for var, usage in wrapper_all_logs.iteritems():\n",
+    "            if usage>0:\n",
+    "                use_wrapper_df.set_value(sid, var, usage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "use_wrapper_df.to_csv('use_wrapper_results.txt', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Serious detectors"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -484,7 +644,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%aimport utils_read_parsing\n",
@@ -546,7 +708,9 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -567,7 +731,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table_intervals_df['count'] = table_intervals_df.select_dtypes(include=['bool']).sum(axis=1)"
@@ -576,7 +742,9 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -633,9 +801,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Anaconda2]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Anaconda2]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -647,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   },
   "toc": {
    "nav_menu": {},
